@startuml
entity "User" as U {
    * ID : INT [PK]
    --
    Name : VARCHAR(255)
    Email : VARCHAR(255) [UNIQUE]
    Password : VARCHAR(255)
    LastPasswordResetRequest : DATETIME
    PasswordResetToken : VARCHAR(255)
    PasswordResetTokenExpires : DATETIME
    PasswordResetTokenUsed : BOOLEAN
    PasswordHistory : JSON
    IsVerified : BOOLEAN [DEFAULT FALSE]
    VerifiedExpires : DATETIME
    VerifiedToken : VARCHAR(255)
    LastVerifiedRequest : DATETIME
    CreatedAt : TIMESTAMP [DEFAULT NOW()]
}

entity "Chat" as C {
    * ID : INT [PK]
    --
    UserID : INT [FK]
    Title: VARCHAR(255)
    Messages : JSON
    LastDate: DATETIME
}

entity "Settings" as S {
    * ID : INT [PK]
    --
    UserID : INT [FK] [UNIQUE]
    Theme : VARCHAR(50) [DEFAULT "light"]
    Language : VARCHAR(50) [DEFAULT "es"]
    DetailLevel : VARCHAR(50) [DEFAULT "simplified"]
    AutoSaveChats : BOOLEAN [DEFAULT TRUE]
    GlobalContext : TEXT [DEFAULT NULL]
}

U ||--o{ C : "1:N"
U ||--|| S : "1:1"
@enduml
